# 2023-autumn-ab-python-cicd-hw6-koshakkkq

./: .env.example  Makefile  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
config/: settings.py
docker/server/: Dockerfile
docker/tests/: Dockerfile
shortener_app/: config.py  database.py  main.py
src/homework_app/: config.py  main.py
tests/: test_.py
